@@ -1,3 +1,7 @@
+2008-06-01  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* IPv6 support in devdiscover and in SNMP collector
+
 2008-05-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* bin/bdbinfo.in: BerkeleyDB version info utility
